[package]
name = "z2fish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
serde_json = "1.0.105"
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_info"]}
env_logger = "0.10.0"

# To use vendored sources:
#
#[source.crates-io]
#replace-with = "vendored-sources"
#
#[source.vendored-sources]
#directory = "vendor"
